# softphone_airflow_provider

./: pyproject.toml
softphone_airflow_provider/hooks/: softphone_hook.py
tests/: conftest.py  test_hook.py
